# hopper

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  project.rs  tool.rs  ui.rs
src/commands/: interactive.rs  mod.rs  run.rs
src/core/: cache.rs  config.rs  mod.rs  project.rs  tool.rs
src/ui/: fzf.rs
tests/unit/: config_test.rs  project_test.rs  tool_test.rs
