[package]
name = "hopper"
version = "0.2.0"
edition = "2021"

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rayon = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockall = "0.11"
assert_cmd = "2"
predicates = "3"
